--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <main>
-    
+
   </main>
+  <script src="https://kit.fontawesome.com/3552b9550d.js" crossorigin="anonymous"></script>
 </body>
 </html>
